Ignore .el files when rendering
But it doesn't work currently. We meet the same issue as
gohugoio/hugo#4874 did.

Signed-off-by: jensenzhang <jingxuan.n.zhang@gmail.com>

--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ copyright = "&copy; 2018"
 theme = "academic"
 enableEmoji = true
 footnotereturnlinkcontents = "<sup>^</sup>"
-ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
+ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$", "\\.el$"]
 preserveTaxonomyNames = true
 paginate = 10
 
